[project]
name = "es-ob-migration"
version = "0.1.0"
description = "Data migration tool from Elasticsearch to OceanBase"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "RAGFlow Team" }]
keywords = ["elasticsearch", "oceanbase", "migration", "vector", "rag"]

dependencies = [
    "elasticsearch>=8.0.0",
    "pyobvector>=0.1.0",
    "pymysql>=1.0.0",
    "sqlalchemy>=2.0.0",
    "click>=8.0.0",
    "tqdm>=4.60.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
es-ob-migrate = "es_ob_migration.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/es_ob_migration"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

